--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "php": "^8.2",
         "dedoc/scramble": "^0.12.19",
         "intervention/image": "^3.11",
+        "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "3.0",
         "league/flysystem-sftp-v3": "3.0",
         "php-open-source-saver/jwt-auth": "^2.8",
         "spatie/laravel-permission": "^6.18",
